# aobot

./: .gitmodules  CLAUDE.md  Cargo.toml  README.md  README_CN.md
crates/aobot-channel-discord/: Cargo.toml
crates/aobot-channel-discord/src/: handler.rs  lib.rs
crates/aobot-channel-telegram/: Cargo.toml
crates/aobot-channel-telegram/src/: api.rs  lib.rs  polling.rs  types.rs
crates/aobot-cli/: Cargo.toml
crates/aobot-cli/src/: chat.rs  main.rs  send.rs
crates/aobot-config/: Cargo.toml
crates/aobot-config/src/: lib.rs
crates/aobot-cron/: Cargo.toml
crates/aobot-cron/src/: lib.rs  scheduler.rs  store.rs
crates/aobot-gateway/: Cargo.toml
crates/aobot-gateway/src/: channel.rs  config_watcher.rs  external_channel.rs  handlers.rs  jsonrpc.rs  lib.rs  plugin_protocol.rs  session_manager.rs  ws.rs
crates/aobot-hooks/: Cargo.toml
crates/aobot-hooks/src/: events.rs  lib.rs  registry.rs
crates/aobot-mcp/: Cargo.toml
crates/aobot-mcp/src/: bridge.rs  config.rs  lib.rs
crates/aobot-media/: Cargo.toml
crates/aobot-media/src/: audio.rs  image.rs  lib.rs  links.rs  runner.rs  types.rs
crates/aobot-memory/: Cargo.toml
crates/aobot-memory/src/: chunking.rs  embeddings.rs  lib.rs  manager.rs  search.rs  store.rs  sync.rs
crates/aobot-plugin-sdk/: Cargo.toml
crates/aobot-plugin-sdk/src/: lib.rs
crates/aobot-skills/: Cargo.toml
crates/aobot-skills/src/: commands.rs  frontmatter.rs  lib.rs  loader.rs
crates/aobot-storage/: Cargo.toml
crates/aobot-storage/src/: lib.rs
crates/aobot-tools/: Cargo.toml
crates/aobot-tools/src/: context.rs  gateway_tool.rs  groups.rs  lib.rs  policy.rs
crates/aobot-tools/src/tools/: agents_list.rs  cron.rs  exec.rs  gateway.rs  image.rs  memory_get.rs  memory_search.rs  message.rs  mod.rs  process.rs  session_status.rs  sessions_history.rs  sessions_list.rs  sessions_send.rs  sessions_spawn.rs  tts.rs
crates/aobot-types/: Cargo.toml
crates/aobot-types/src/: lib.rs
