[workspace]
resolver = "2"
members = [
    "crates/aobot-types",
    "crates/aobot-config",
    "crates/aobot-storage",
    "crates/aobot-gateway",
    "crates/aobot-cli",
    "pi-agent-rs/crates/pi-agent-core",
    "pi-agent-rs/crates/pi-agent-ai",
    "pi-agent-rs/crates/pi-coding-agent",
]

[workspace.package]
version = "0.1.0"
edition = "2024"

[workspace.dependencies]
# Inherited from pi-agent-rs
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
anyhow = "1"
async-trait = "0.1"
futures = "0.3"
tokio-stream = "0.1"
tokio-util = { version = "0.7", features = ["rt"] }
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.12", features = ["json", "stream"] }
bytes = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
regex = "1"
once_cell = "1"
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"
base64 = "0.22"
url = "2"
uuid = { version = "1", features = ["v4"] }

# aobot-specific
rusqlite = { version = "0.32", features = ["bundled"] }
clap = { version = "4", features = ["derive"] }
json5 = "0.4"
dotenvy = "0.15"
tokio-tungstenite = "0.26"
axum = "0.8"
notify = { version = "6", default-features = false, features = ["macos_kqueue"] }
notify-debouncer-mini = "0.4"

# Workspace crate references
pi-agent-core = { path = "pi-agent-rs/crates/pi-agent-core" }
pi-agent-ai = { path = "pi-agent-rs/crates/pi-agent-ai" }
pi-coding-agent = { path = "pi-agent-rs/crates/pi-coding-agent" }
aobot-types = { path = "crates/aobot-types" }
aobot-config = { path = "crates/aobot-config" }
aobot-storage = { path = "crates/aobot-storage" }
aobot-gateway = { path = "crates/aobot-gateway" }
