[package]
name = "aobot-cli"
version.workspace = true
edition.workspace = true

[[bin]]
name = "aobot"
path = "src/main.rs"

[features]
default = ["channel-telegram", "channel-discord"]
channel-telegram = ["dep:aobot-channel-telegram"]
channel-discord = ["dep:aobot-channel-discord"]

[dependencies]
aobot-types = { workspace = true }
aobot-config = { workspace = true }
aobot-gateway = { workspace = true }
aobot-channel-telegram = { workspace = true, optional = true }
aobot-channel-discord = { workspace = true, optional = true }
pi-agent-core = { workspace = true }
pi-agent-ai = { workspace = true }
pi-coding-agent = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
tokio-tungstenite = { workspace = true }
futures = { workspace = true }
serde_json = { workspace = true }
clap = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
uuid = { workspace = true }
