[package]
name = "aobot-config"
version.workspace = true
edition.workspace = true

[dependencies]
aobot-types = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
json5 = { workspace = true }
dotenvy = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
dirs = "6"
