[package]
name = "aobot-plugin-sdk"
version.workspace = true
edition.workspace = true

[dependencies]
aobot-types = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
