[package]
name = "aobot-storage"
version.workspace = true
edition.workspace = true

[dependencies]
rusqlite = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
