[package]
name = "aobot-tools"
version.workspace = true
edition.workspace = true

[dependencies]
aobot-types = { workspace = true }
aobot-config = { workspace = true }
pi-agent-core = { workspace = true }
pi-coding-agent = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
async-trait = { workspace = true }
anyhow = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
reqwest = { workspace = true }
base64 = { workspace = true }
once_cell = { workspace = true }
